# elevora-experimental

./: result.json  w3schools.com.json  workspacecouk.json
backend/: .env  alembic.ini  config.py  en.wikipedia.org.json  main.py  package.json  pluralsightcom.json  pyproject.toml  seo_audit_20250529_165450.json  wired.com.json
backend/alembic/: env.py
backend/alembic/versions/: 12a542f6d4d6_initial_schema.py  50b07369cc47_added_username_field_to_user_table.py  b2d27bcc9b97_making_experimental_changes.py  update_schema.py  update_schema_002.py
backend/db/: base.py  session.py
backend/endpoints/project/: routes.py
backend/endpoints/user/: routes.py
backend/models/: __init__.py  audit.py  audit_detail.py  competitor.py  content_suggestion.py  keyword.py  page.py  project.py  user.py
backend/schemas/: project.py  user.py
backend/utils/audit/: audit_service.py  audit_site.py  backlinks.py  enhaced_audit.py  enhanced_audit.py
backend/utils/auth/: dependencies.py  jwt_handler.py
backend/utils/user/: getUserByToken.py
documents/: Features.docx  SEO AI AGENT_First Deliverable.docx  interaction_diagram.txt  state diagram.txt
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  typing.ts
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  LoginPage.tsx  ProjectsDropDOwn.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/pages/: AuditDashboard.tsx  AuditSite.tsx  CreateProject.tsx  GetStarted.tsx  Login.tsx  Signup.tsx  UserProfile.tsx
frontend/src/types/: audit.ts
frontend/store/: ProjectStore.ts
(+14 files in other folders)
